Remove align wide and full temporary fix

--- a/exford/sass/_full-site-editing.scss
+++ b/exford/sass/_full-site-editing.scss
@@ -14,20 +14,8 @@
 		width: 100%;
 	}
 
-	.alignfull {
-		margin: 0;
-		max-width: 100%;
-		width: 100%;
-	}
-
-	.main-navigation {
-		.alignwide {
-			width: 100%;
-		}
-
-		a {
-			text-decoration: none;
-		}
+	.main-navigation a {
+		text-decoration: none;
 	}
 	
 	@include media(mobile-only) {
