--- a/exford/style-rtl.css
+++ b/exford/style-rtl.css
@@ -4043,6 +4043,10 @@ p:not(.site-title) a:hover {
 	margin-top: 0;
 }
 
+.fse-template-part .main-navigation .alignwide, .fse-template-part .main-navigation .alignfull {
+	width: 100%;
+}
+
 .fse-template-part .main-navigation .has-text-color > .main-menu.footer-menu > li > a {
 	color: inherit;
 }
@@ -4114,16 +4118,6 @@ p:not(.site-title) a:hover {
 .fse-template-part#masthead {
 	max-width: 100%;
 	padding: unset;
-	width: 100%;
-}
-
-.fse-template-part .alignfull {
-	margin: 0;
-	max-width: 100%;
-	width: 100%;
-}
-
-.fse-template-part .main-navigation .alignwide {
 	width: 100%;
 }
 
