--- a/exford/style.css
+++ b/exford/style.css
@@ -4072,6 +4072,10 @@ p:not(.site-title) a:hover {
 	margin-top: 0;
 }
 
+.fse-template-part .main-navigation .alignwide, .fse-template-part .main-navigation .alignfull {
+	width: 100%;
+}
+
 .fse-template-part .main-navigation .has-text-color > .main-menu.footer-menu > li > a {
 	color: inherit;
 }
@@ -4143,16 +4147,6 @@ p:not(.site-title) a:hover {
 .fse-template-part#masthead {
 	max-width: 100%;
 	padding: unset;
-	width: 100%;
-}
-
-.fse-template-part .alignfull {
-	margin: 0;
-	max-width: 100%;
-	width: 100%;
-}
-
-.fse-template-part .main-navigation .alignwide {
 	width: 100%;
 }
 
